--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -3,11 +3,17 @@
     <string name="app_name">MaMange</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
-    <string name="login">Login</string>
     <string name="registrati">Registrati</string>
     <string name="crea">Crea Group Order</string>
     <string name="unisciti">Unisciti ad un Group Order</string>
     <string name="accedi">Accedi</string>
     <string name="passconf">Conferma Password</string>
     <string name="passdimenticata">Password dimenticata?</string>
+    <string name="username">Username</string>
+    <string name="ospite">Ospite</string>
+    <string name="emailRichiestaErr">email richiesta</string>
+    <string name="passwordRichiestaErr">password richiesta</string>
+    <string name="emailValidaErr">Fornisci una email valida!</string>
+    <string name="seiCaratteriErr">Inserisci almeno sei caratteri</string>
+    <string name="stessaPassErr">Le password non combaciano</string>
 </resources>
