Stampa elenco dei ristoranti disponibili da Realtime Database Firebase

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -17,4 +17,5 @@
     <string name="seiCaratteriErr">Inserisci almeno sei caratteri</string>
     <string name="stessaPassErr">Le password non combaciano</string>
     <string name="logout">Esci</string>
+    <string name="cerca">Cerca un ristorante...</string>
 </resources>
